# gallery-view

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-04-26-gallery-view.md  2026-04-27-individual-tiff-handler.md  2026-05-10-region-view.md
docs/superpowers/specs/: 2026-04-26-gallery-view-design.md  2026-04-27-individual-tiff-handler-design.md  2026-05-10-region-view-design.md
src/gallery_view/: __init__.py  __main__.py  cache.py  cli.py  loader.py  mips.py  scan.py  stitch.py  types.py
src/gallery_view/sources/: __init__.py  _squid_common.py  base.py  multi_channel_tiff.py  ome_tiff.py  single_channel_tiff.py  single_tiff.py  stack_tiff.py
src/gallery_view/ui/: colors.py  gallery_window.py  lut_dialog.py  sources_panel.py  viewer3d.py  zoomable_view.py
tests/: conftest.py  test_acquisition_regions.py  test_cache.py  test_cache_region.py  test_gallery_window_region.py  test_gallery_window_smoke.py  test_handler_cache_integration.py  test_loader_region.py  test_lut_override.py  test_mips.py  test_scan.py  test_single_tiff_coords.py  test_stitch.py
tests/sources/: test_multi_channel_tiff.py  test_ome_tiff.py  test_registry.py  test_single_channel_tiff.py  test_single_tiff.py  test_squid_common.py  test_stack_tiff.py
