[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gallery-view"
version = "0.1.0"
description = "Standalone gallery viewer for z-stack microscopy acquisitions written by squid"
requires-python = ">=3.11"
dependencies = [
    "qtpy>=2.4",
    "PyQt6>=6.5",
    "numpy>=1.24",
    "tifffile>=2023.7",
    "pyyaml>=6.0",
    "napari>=0.4.18,<0.6",
    "matplotlib>=3.7",
    "platformdirs>=3.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
gallery-view = "gallery_view.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gallery_view"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
